--- a/style.css
+++ b/style.css
@@ -169,7 +169,10 @@ position: relative; top: 100px; }
 }
 
 
-
+.footer{
+  height: 200px; width: 100%; background: #F9F9FC; display: flex; 
+  align-items: center; justify-content: center; font-size: 20px; color: rgb(68, 63, 63);
+}
 
 
 
